--- a/Android/SundayFriendsHack/app/src/main/res/layout/fragment_admin_home.xml
+++ b/Android/SundayFriendsHack/app/src/main/res/layout/fragment_admin_home.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -30,17 +30,40 @@
     </androidx.appcompat.widget.Toolbar>
 
     <TextView
-        android:id="@+id/fraguserhome_tv_balance"
+        android:id="@+id/fragadminhome_tv_user_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
-        android:paddingBottom="24dp"
-        android:text="Hi, James \n\nHave a nice day \nSaturday, November 21"
-        android:textSize="16dp"
+        android:text="Welcome, James"
+        android:textSize="14sp"
         android:textStyle="bold"
+        android:textColor="@color/colorBlack"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/fragadminhome_toolbar" />
+        app:layout_constraintTop_toBottomOf="@+id/fraguserhome_toolbar" />
+
+    <TextView
+        android:id="@+id/static_have_nice_date"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:text="Have a nice day!"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        android:layout_marginTop="12sp"
+        android:textColor="@color/colorBlack"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/fraguserhome_tv_user_name" />
+
+    <TextView
+        android:id="@+id/frag_adminhome_date"
+        app:layout_constraintTop_toBottomOf="@+id/static_have_nice_date"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Monday, November 23"
+        android:layout_marginStart="16dp"
+        android:textStyle="bold"
+        app:layout_constraintStart_toStartOf="parent"/>
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/fraguserhome_vertical_guideline"
@@ -51,20 +74,18 @@
 
     <RelativeLayout
         android:id="@+id/square1"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:layout_width="match_parent"
+        android:layout_height="100dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginBottom="16dp"
+
         android:background="@color/square1color"
         android:paddingStart="16dp"
         android:paddingTop="16dp"
         android:paddingEnd="16dp"
-        app:layout_constraintDimensionRatio="W, 1:1"
-        app:layout_constraintEnd_toStartOf="@+id/fraguserhome_vertical_guideline"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/fraguserhome_tv_balance">
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent">
 
         <TextView
             android:id="@+id/static_my_tickets_amount"
@@ -72,15 +93,79 @@
             android:layout_height="wrap_content"
             android:text="Admin Action"
             android:textColor="@color/colorBlack"
-            android:textStyle="bold" />
+            android:layout_centerVertical="true"
+            android:textStyle="bold"
+            android:textSize="16sp"/>
 
         <ImageView
-            android:layout_width="48dp"
-            android:layout_height="48dp"
-            android:layout_below="@+id/static_my_tickets_amount"
-            android:layout_marginTop="48dp"
-            app:srcCompat="@drawable/ic_square1_img" />
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:layout_alignParentEnd="true"
+
+            app:srcCompat="@drawable/ic_img_3" />
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:id="@+id/square2"
+        android:layout_width="match_parent"
+        android:layout_height="100dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="8dp"
+        android:background="@color/square2color"
+        android:paddingStart="16dp"
+        android:paddingTop="16dp"
+        android:paddingEnd="16dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Withdraw/Deposit"
+            android:textColor="@color/colorBlack"
+            android:layout_centerVertical="true"
+            android:textStyle="bold"
+            android:textSize="16sp"/>
+
+        <ImageView
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:layout_alignParentEnd="true"
+            app:srcCompat="@drawable/ic_img_2" />
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:id="@+id/square3"
+        android:layout_width="match_parent"
+        android:layout_height="100dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="8dp"
+        android:background="@color/square3color"
+        android:paddingStart="16dp"
+        android:paddingTop="16dp"
+        android:paddingEnd="16dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Link Family"
+            android:textColor="@color/colorBlack"
+            android:layout_centerVertical="true"
+            android:textStyle="bold"
+            android:textSize="16sp"/>
+
+        <ImageView
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:layout_alignParentEnd="true"
+            app:srcCompat="@drawable/ic_img_2" />
     </RelativeLayout>
 
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+
+
+</LinearLayout>
