--- a/Android/SundayFriendsHack/app/src/main/res/layout/fragment_login.xml
+++ b/Android/SundayFriendsHack/app/src/main/res/layout/fragment_login.xml
@@ -1,23 +1,42 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:clickable="true"
     android:focusable="true">
 
-    <com.google.android.gms.common.SignInButton
+    <ImageView
+        android:id="@+id/activitylogin_app_logo"
+        android:layout_width="250dp"
+        android:layout_height="250dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginTop="150dp"/>
 
+    <TextView
         android:id="@+id/activitylogin_test_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/activitylogin_app_logo"
-        android:layout_centerInParent="true"
-        android:layout_marginTop="16dp" />
+        app:layout_constraintTop_toBottomOf="@+id/activitylogin_app_logo"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginTop="16dp"
+        android:text="Sign in with Google"
+        android:textStyle="bold"
+        android:paddingStart="16dp"
+        android:paddingEnd="16dp"
+        android:paddingTop="6dp"
+        android:paddingBottom="6dp"
+        android:elevation="6dp"
+        android:background="@color/colorWhite"
+        app:drawableStartCompat="@drawable/ic_google_icon"
+        android:drawablePadding="8dp"
+        android:gravity="center"/>
 
-    <ImageView
-        android:id="@+id/activitylogin_app_logo"
-        android:layout_width="200dp"
-        android:layout_height="wrap_content"
-        android:layout_centerInParent="true" />
 
-</RelativeLayout>
+
+
+</androidx.constraintlayout.widget.ConstraintLayout>
