--- a/Android/SundayFriendsHack/app/src/main/res/layout/fragment_user_home.xml
+++ b/Android/SundayFriendsHack/app/src/main/res/layout/fragment_user_home.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -29,153 +30,205 @@
             android:layout_marginEnd="12dp" />
     </androidx.appcompat.widget.Toolbar>
 
-
-    <TextView
-        android:id="@+id/fraguserhome_tv_balance"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
-        android:paddingBottom="24dp"
-        android:text="Hi, Evan Li \n\nHave a nice day \nSaturday, November 21"
-        android:textSize="16dp"
-        android:textStyle="bold"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/fraguserhome_toolbar" />
-
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/fraguserhome_vertical_guideline"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        app:layout_constraintGuide_percent="0.5" />
-
-    <RelativeLayout
-        android:id="@+id/square1"
-        android:layout_width="0dp"
+    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+        android:id="@+id/frag_userhome_swiperefresh"
+        android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="16dp"
-        android:background="@color/square1color"
-        android:paddingStart="16dp"
-        android:paddingTop="16dp"
-        android:paddingEnd="16dp"
-        app:layout_constraintDimensionRatio="W, 1:1"
-        app:layout_constraintEnd_toStartOf="@+id/fraguserhome_vertical_guideline"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/fraguserhome_tv_balance">
+        app:layout_constraintTop_toBottomOf="@+id/fraguserhome_toolbar">
 
-        <TextView
-            android:id="@+id/static_my_tickets_amount"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="My Tickets: \n500"
-            android:textColor="@color/colorBlack"
-            android:textStyle="bold" />
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
-        <ImageView
-            android:layout_width="48dp"
-            android:layout_height="48dp"
-            android:layout_below="@+id/static_my_tickets_amount"
-            android:layout_marginTop="48dp"
-            app:srcCompat="@drawable/ic_square1_img" />
-    </RelativeLayout>
+            <TextView
+                android:id="@+id/fraguserhome_tv_user_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="16dp"
+                android:text="Welcome, --"
+                android:textSize="14sp"
+                android:textStyle="bold"
+                android:textColor="@color/colorBlack"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
-    <RelativeLayout
-        android:id="@+id/square2"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginBottom="16dp"
-        android:background="@color/square2color"
-        android:padding="16dp"
-        app:layout_constraintDimensionRatio="W, 1:1"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/fraguserhome_vertical_guideline"
-        app:layout_constraintTop_toBottomOf="@+id/fraguserhome_tv_balance">
+            <TextView
+                android:id="@+id/static_have_nice_date"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                android:text="Have a nice day!"
+                android:textSize="20sp"
+                android:textStyle="bold"
+                android:layout_marginTop="12sp"
+                android:textColor="@color/colorBlack"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/fraguserhome_tv_user_name" />
 
-        <TextView
-            android:id="@+id/static_recent_transactions"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Recent \nTransactions"
-            android:textColor="@color/colorBlack"
-            android:textStyle="bold" />
+            <TextView
+                android:id="@+id/frag_userhome_date"
+                app:layout_constraintTop_toBottomOf="@+id/static_have_nice_date"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Date --"
+                android:layout_marginStart="16dp"
+                android:textStyle="bold"
+                app:layout_constraintStart_toStartOf="parent"/>
 
-        <ImageView
-            android:layout_width="48dp"
-            android:layout_height="48dp"
-            android:layout_below="@+id/static_recent_transactions"
-            android:layout_marginTop="48dp"
-            app:srcCompat="@drawable/ic_square2_img" />
-    </RelativeLayout>
 
-    <RelativeLayout
-        android:id="@+id/square3"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="16dp"
-        android:background="@color/square3color"
-        android:padding="16dp"
-        app:layout_constraintDimensionRatio="W, 1:1"
-        app:layout_constraintEnd_toStartOf="@+id/fraguserhome_vertical_guideline"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/square1">
 
-        <TextView
-            android:id="@+id/static_my_family_members"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="My Family \nMembers"
+            <androidx.constraintlayout.widget.Guideline
+                android:id="@+id/fraguserhome_vertical_guideline"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                app:layout_constraintGuide_percent="0.5" />
 
-            android:textColor="@color/colorBlack"
-            android:textStyle="bold" />
+            <RelativeLayout
+                android:id="@+id/square1"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="16dp"
+                android:layout_marginEnd="8dp"
+                android:layout_marginBottom="16dp"
+                android:background="@color/square1color"
+                android:paddingStart="16dp"
+                android:paddingTop="16dp"
+                android:paddingEnd="16dp"
+                app:layout_constraintDimensionRatio="W, 1:1"
+                app:layout_constraintEnd_toStartOf="@+id/fraguserhome_vertical_guideline"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/frag_userhome_date">
 
-        <ImageView
-            android:layout_width="48dp"
-            android:layout_height="48dp"
-            android:layout_below="@+id/static_my_family_members"
-            android:layout_marginTop="48dp"
-            app:srcCompat="@drawable/ic_square3_img" />
-    </RelativeLayout>
+                <TextView
+                    android:id="@+id/static_my_tickets_amount"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="My Tickets:"
+                    android:textColor="@color/colorBlack"
+                    android:textStyle="bold" />
 
-    <RelativeLayout
-        android:id="@+id/square4"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginBottom="16dp"
-        android:background="@color/square4color"
-        android:padding="16dp"
-        app:layout_constraintDimensionRatio="W, 1:1"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/fraguserhome_vertical_guideline"
-        app:layout_constraintTop_toBottomOf="@+id/square2">
+                <TextView
+                    android:id="@+id/frag_userhome_num_tickets"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="--"
+                    android:textColor="@color/colorBlack"
+                    android:textStyle="bold"
+                    android:textSize="18sp"
+                    android:layout_below="@+id/static_my_tickets_amount"/>
 
-        <TextView
-            android:id="@+id/static_my_profile"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="My Profile \n"
-            android:textColor="@color/colorBlack"
-            android:textStyle="bold" />
+                <ImageView
+                    android:layout_width="100dp"
+                    android:layout_height="100dp"
+                    android:layout_below="@+id/frag_userhome_num_tickets"
+                    android:layout_marginTop="12dp"
+                    app:srcCompat="@drawable/ic_img_1" />
+            </RelativeLayout>
 
-        <ImageView
-            android:layout_width="48dp"
-            android:layout_height="48dp"
-            android:layout_below="@+id/static_my_profile"
-            android:layout_marginTop="48dp"
-            app:srcCompat="@drawable/ic_square4_img" />
-    </RelativeLayout>
+            <RelativeLayout
+                android:id="@+id/square2"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="16dp"
+                android:layout_marginEnd="16dp"
+                android:layout_marginBottom="16dp"
+                android:background="@color/square2color"
+                android:padding="16dp"
+                app:layout_constraintDimensionRatio="W, 1:1"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/fraguserhome_vertical_guideline"
+                app:layout_constraintTop_toBottomOf="@+id/frag_userhome_date">
+
+                <TextView
+                    android:id="@+id/static_recent_transactions"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Recent \nTransactions"
+                    android:textColor="@color/colorBlack"
+                    android:textStyle="bold" />
+
+                <ImageView
+                    android:layout_width="100dp"
+                    android:layout_height="100dp"
+                    android:layout_below="@+id/static_recent_transactions"
+                    android:layout_marginTop="24dp"
+                    app:srcCompat="@drawable/ic_img_2" />
+            </RelativeLayout>
+
+            <RelativeLayout
+                android:id="@+id/square3"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="16dp"
+                android:layout_marginEnd="8dp"
+                android:layout_marginBottom="16dp"
+                android:background="@color/square3color"
+                android:padding="16dp"
+                app:layout_constraintDimensionRatio="W, 1:1"
+                app:layout_constraintEnd_toStartOf="@+id/fraguserhome_vertical_guideline"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/square1">
+
+                <TextView
+                    android:id="@+id/static_my_family_members"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="My Family \nMembers"
+
+                    android:textColor="@color/colorBlack"
+                    android:textStyle="bold" />
+
+                <ImageView
+                    android:layout_width="100dp"
+                    android:layout_height="100dp"
+                    android:layout_below="@+id/static_my_family_members"
+                    android:layout_marginTop="24dp"
+                    app:srcCompat="@drawable/ic_img_3" />
+            </RelativeLayout>
+
+            <RelativeLayout
+                android:id="@+id/square4"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="16dp"
+                android:layout_marginEnd="16dp"
+                android:layout_marginBottom="16dp"
+                android:background="@color/square4color"
+                android:padding="16dp"
+                app:layout_constraintDimensionRatio="W, 1:1"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/fraguserhome_vertical_guideline"
+                app:layout_constraintTop_toBottomOf="@+id/square2">
+
+                <TextView
+                    android:id="@+id/static_my_profile"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="My Profile \n"
+                    android:textColor="@color/colorBlack"
+                    android:textStyle="bold" />
+
+                <ImageView
+                    android:layout_width="100dp"
+                    android:layout_height="100dp"
+                    android:layout_below="@+id/static_my_profile"
+                    android:layout_marginTop="24dp"
+                    app:srcCompat="@drawable/ic_img_4" />
+            </RelativeLayout>
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+
+    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
+
+
+
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
