--- a/Android/SundayFriendsHack/app/src/main/res/layout/fragment_user_profile.xml
+++ b/Android/SundayFriendsHack/app/src/main/res/layout/fragment_user_profile.xml
@@ -40,7 +40,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:fontFamily="@font/opensans"
-            android:text="Evan Li"
+            android:text="Name --"
             android:textColor="@color/colorWhite"
             android:textSize="14sp"
             android:textStyle="bold"
@@ -49,11 +49,11 @@
             app:layout_constraintTop_toBottomOf="@+id/fraguserprofile_profile_picture" />
 
         <TextView
-            android:id="@+id/fraguserprofile_location"
+            android:id="@+id/fraguserprofile_email"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:fontFamily="@font/opensans"
-            android:text="evan.li789@gmail.com"
+            android:text="email --"
             android:textColor="@color/colorWhite"
             android:textSize="12sp"
             android:textStyle="bold"
@@ -78,13 +78,14 @@
             android:textStyle="bold" />
 
         <TextView
+            android:id="@+id/frag_userprofile_second_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
             android:layout_centerVertical="true"
             android:layout_marginEnd="16dp"
             android:drawablePadding="12dp"
-            android:text="Member A"
+            android:text="--"
             android:textColor="@color/colorBlack"
             app:drawableEndCompat="@drawable/ic_black_arrow_point_right" />
 
@@ -105,18 +106,19 @@
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
             android:layout_marginStart="16dp"
-            android:text="Date of Birth"
+            android:text="Email"
             android:textColor="@color/colorBlack"
             android:textStyle="bold" />
 
         <TextView
+            android:id="@+id/frag_userprofile_second_email"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
             android:layout_centerVertical="true"
             android:layout_marginEnd="16dp"
             android:drawablePadding="12dp"
-            android:text="3/22/1994"
+            android:text="--"
             android:textColor="@color/colorBlack"
             app:drawableEndCompat="@drawable/ic_black_arrow_point_right" />
 
@@ -148,70 +150,6 @@
             android:layout_centerVertical="true"
             android:layout_marginEnd="16dp"
             android:drawablePadding="12dp"
-            android:text="415-222-3333"
-            android:textColor="@color/colorBlack"
-            app:drawableEndCompat="@drawable/ic_black_arrow_point_right" />
-
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:layout_alignParentBottom="true"
-            android:background="@color/dividerColor" />
-    </RelativeLayout>
-
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="75dp"
-        app:layout_constraintTop_toBottomOf="@+id/user_profile_top_layout">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            android:layout_marginStart="16dp"
-            android:text="Address"
-            android:textColor="@color/colorBlack"
-            android:textStyle="bold" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
-            android:layout_centerVertical="true"
-            android:layout_marginEnd="16dp"
-            android:drawablePadding="12dp"
-            android:text="450 Market St., San Francisco"
-            android:textColor="@color/colorBlack"
-            app:drawableEndCompat="@drawable/ic_black_arrow_point_right" />
-
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:layout_alignParentBottom="true"
-            android:background="@color/dividerColor" />
-    </RelativeLayout>
-
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="75dp"
-        app:layout_constraintTop_toBottomOf="@+id/user_profile_top_layout">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            android:layout_marginStart="16dp"
-            android:text="Security Question"
-            android:textColor="@color/colorBlack"
-            android:textStyle="bold" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
-            android:layout_centerVertical="true"
-            android:layout_marginEnd="16dp"
-            android:drawablePadding="12dp"
             android:text=""
             android:textColor="@color/colorBlack"
             app:drawableEndCompat="@drawable/ic_black_arrow_point_right" />
@@ -222,4 +160,6 @@
             android:layout_alignParentBottom="true"
             android:background="@color/dividerColor" />
     </RelativeLayout>
+
+
 </LinearLayout>
