--- a/Android/SundayFriendsHack/app/src/main/res/layout/popupmenu_activate.xml
+++ b/Android/SundayFriendsHack/app/src/main/res/layout/popupmenu_activate.xml
@@ -5,14 +5,14 @@
     android:background="@android:drawable/dialog_holo_light_frame">
 
     <TextView
-        android:id="@+id/popupmenu_settings_signout"
+        android:id="@+id/popupmenu_deactivate_user_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:background="?attr/selectableItemBackground"
         android:gravity="center_vertical"
         android:padding="12dp"
-        android:text="Sign out"
+        android:text="Activate user"
         android:textColor="@color/colorBlackFont" />
 
 
