--- a/Android/SundayFriendsHack/app/src/main/res/layout/viewholder_admin_list_of_users.xml
+++ b/Android/SundayFriendsHack/app/src/main/res/layout/viewholder_admin_list_of_users.xml
@@ -22,12 +22,14 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
+        android:layout_marginTop="24dp"
         android:text="Name"
+        android:textColor="@color/colorBlack"
+        android:textSize="16sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@id/vh_adminusers_email"
-        app:layout_constraintEnd_toStartOf="@+id/vh_adminusers_balance"
         app:layout_constraintStart_toEndOf="@id/vh_adminusers_user_profile_pic"
-        app:layout_constraintTop_toTopOf="@id/vh_adminusers_user_profile_pic"
+        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0" />
 
     <TextView
@@ -37,8 +39,7 @@
         android:layout_marginStart="16dp"
         android:text="Email"
         android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="@id/vh_adminusers_user_profile_pic"
-        app:layout_constraintEnd_toStartOf="@+id/vh_adminusers_balance"
+        app:layout_constraintBottom_toBottomOf="@id/vh_adminusers_name"
         app:layout_constraintStart_toEndOf="@id/vh_adminusers_user_profile_pic"
         app:layout_constraintTop_toBottomOf="@id/vh_adminusers_name"
         app:layout_constraintVertical_bias="0" />
@@ -49,16 +50,21 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="16dp"
         android:text="$$$"
-        app:layout_constraintBottom_toBottomOf="@+id/vhadminusers_btn_withdraw"
-        app:layout_constraintEnd_toStartOf="@+id/vhadminusers_btn_withdraw"
-        app:layout_constraintHorizontal_bias="1"
-        app:layout_constraintTop_toTopOf="@+id/vhadminusers_btn_withdraw" />
+        android:textColor="@color/colorBlack"
+        android:textSize="16sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/vhadminusers_btn_deposit"
+        app:layout_constraintTop_toTopOf="parent" />
 
 
     <TextView
         android:id="@+id/vhadminusers_btn_withdraw"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
         android:background="@drawable/background_btn_square_blue"
         android:paddingStart="6dp"
@@ -70,12 +76,14 @@
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/vhadminusers_btn_deposit"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintStart_toEndOf="@+id/vh_adminusers_user_profile_pic"
+        app:layout_constraintTop_toBottomOf="@id/vh_adminusers_name" />
 
     <TextView
         android:id="@+id/vhadminusers_btn_deposit"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
         android:layout_marginEnd="8dp"
         android:background="@drawable/background_btn_square_blue"
         android:paddingStart="6dp"
@@ -86,8 +94,18 @@
         android:textColor="@color/colorWhite"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/vhadminusers_btn_withdraw"
+        app:layout_constraintTop_toBottomOf="@id/vh_adminusers_name" />
+
+    <ImageView
+        android:id="@+id/vhadminusers_btn_more"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="?attr/actionBarItemBackground"
+        android:padding="12dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/ic_black_more_vertical" />
 
     <View
         android:layout_width="match_parent"
