--- a/Android/SundayFriendsHack/app/src/main/res/layout/viewholder_single_user_family_member.xml
+++ b/Android/SundayFriendsHack/app/src/main/res/layout/viewholder_single_user_family_member.xml
@@ -26,7 +26,17 @@
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@id/vh_singlefamilymember_profile_pic"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="@+id/vh_singlefamilymember_profile_pic"
+        app:layout_constraintVertical_bias="0"/>
+
+    <TextView
+        android:id="@+id/vh_singlefamilymember_email"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="test@gmail.com"
+        app:layout_constraintTop_toBottomOf="@+id/vh_singlefamilymember_name"
+        app:layout_constraintStart_toEndOf="@+id/vh_singlefamilymember_profile_pic"
+        android:layout_marginStart="16sp"/>
 
     <TextView
         android:id="@+id/vh_singlefamilymember_user_balance"
@@ -37,7 +47,17 @@
         android:textColor="@color/colorBlack"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toEndOf="@id/vh_singlefamilymember_name"
+        app:layout_constraintEnd_toStartOf="@+id/vh_singlefamilymember_arrow"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageView
+        android:id="@+id/vh_singlefamilymember_arrow"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:srcCompat="@drawable/ic_black_arrow_point_right"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:padding="16dp"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
