--- a/Android/SundayFriendsHack/app/src/main/res/layout/fragment_admin_more.xml
+++ b/Android/SundayFriendsHack/app/src/main/res/layout/fragment_admin_more.xml
@@ -65,12 +65,11 @@
                 app:layout_constraintTop_toBottomOf="@+id/name" />
 
             <TextView
+                android:id="@+id/static_admin_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="24dp"
                 android:layout_marginBottom="6dp"
-                android:drawableStart="@drawable/ic_white_profile_check_24dp"
-                android:drawablePadding="3dp"
                 android:gravity="center"
                 android:text="Admin"
                 android:textColor="@color/colorWhite"
@@ -78,6 +77,15 @@
                 app:layout_constraintBottom_toTopOf="@+id/profile_pic"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent" />
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:srcCompat="@drawable/ic_white_profile_check_24dp"
+                app:layout_constraintTop_toTopOf="@+id/static_admin_text"
+                app:layout_constraintBottom_toBottomOf="@+id/static_admin_text"
+                app:layout_constraintEnd_toStartOf="@+id/static_admin_text"
+                android:layout_marginEnd="3dp"/>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -190,11 +198,6 @@
                 android:textColor="@color/colorBlack"
                 android:textStyle="bold" />
 
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:layout_alignParentBottom="true"
-                android:background="@color/dividerColor" />
         </RelativeLayout>
 
     </LinearLayout>
