--- a/Android/SundayFriendsHack/app/src/main/res/layout/fragment_user_profile.xml
+++ b/Android/SundayFriendsHack/app/src/main/res/layout/fragment_user_profile.xml
@@ -62,6 +62,18 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/tv_name" />
 
+            <TextView
+                android:id="@+id/tv_family_id"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Family Id: --"
+                android:textColor="@color/colorWhite"
+                android:textSize="12sp"
+                android:textStyle="bold"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/tv_email" />
+
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <RelativeLayout
@@ -202,11 +214,6 @@
                 android:textColor="@color/colorBlack"
                 android:textStyle="bold" />
 
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:layout_alignParentBottom="true"
-                android:background="@color/dividerColor" />
         </RelativeLayout>
 
 
